BTL3/initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from d:\PPL_BTL\BTL3\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+.'", "'==.'", "'::'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!='", "'=='", "'!'", "'&&'", 
                     "'||'", "'<='", "'>='", "'='", "'<'", "'>'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "':'", "','", 
                     "'..'", "'.'", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Self'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN_LITERAL", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "STR_CONCAT", "STR_COMPARE", 
                      "SCOPE_OP", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT_EQUAL", 
                      "EQUAL_TO", "NOT", "AND", "OR", "LTE", "GTE", "ASSIGN", 
                      "LT", "GT", "LP", "RP", "LSB", "RSB", "LCB", "RCB", 
                      "SEMI", "COLON", "COMMA", "DOTDOT", "DOT", "BREAK", 
                      "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", "TRUE", 
                      "FALSE", "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", 
                      "STRING", "RETURN", "NULL", "CLASS", "VAL", "VAR", 
                      "SELF", "CONSTRUCTOR", "DESTRUCTOR", "NEW", "BY", 
                      "ID", "DOLLAR_ID", "BLOCK_COMMENT", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_inheritance_from = 2
    RULE_inside_decls = 3
    RULE_manydecl = 4
    RULE_funcdecl = 5
    RULE_funcdecl1 = 6
    RULE_funcdecl2 = 7
    RULE_listparam_with_type = 8
    RULE_listparam = 9
    RULE_vardecl = 10
    RULE_init_list = 11
    RULE_array_decl = 12
    RULE_onevar = 13
    RULE_listvar = 14
    RULE_stmt = 15
    RULE_vardecl_stmt = 16
    RULE_listvar_no_dollar = 17
    RULE_member_access_stmt = 18
    RULE_assign_stmt = 19
    RULE_if_stmt = 20
    RULE_else_part = 21
    RULE_for_stmt = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_ret_stmt = 25
    RULE_block_stmt = 26
    RULE_stmts_list = 27
    RULE_exp = 28
    RULE_stringExp = 29
    RULE_logicExp = 30
    RULE_addExp = 31
    RULE_mulExp = 32
    RULE_unaryLogicExp = 33
    RULE_unarySignExp = 34
    RULE_indexExp = 35
    RULE_callExp1 = 36
    RULE_selfExp = 37
    RULE_callExp2 = 38
    RULE_newExp = 39
    RULE_lastExpr = 40
    RULE_index_operators = 41
    RULE_literal = 42
    RULE_exps_list = 43
    RULE_typ = 44
    RULE_arr_type = 45
    RULE_arr_size = 46

    ruleNames =  [ "program", "classdecl", "inheritance_from", "inside_decls", 
                   "manydecl", "funcdecl", "funcdecl1", "funcdecl2", "listparam_with_type", 
                   "listparam", "vardecl", "init_list", "array_decl", "onevar", 
                   "listvar", "stmt", "vardecl_stmt", "listvar_no_dollar", 
                   "member_access_stmt", "assign_stmt", "if_stmt", "else_part", 
                   "for_stmt", "break_stmt", "continue_stmt", "ret_stmt", 
                   "block_stmt", "stmts_list", "exp", "stringExp", "logicExp", 
                   "addExp", "mulExp", "unaryLogicExp", "unarySignExp", 
                   "indexExp", "callExp1", "selfExp", "callExp2", "newExp", 
                   "lastExpr", "index_operators", "literal", "exps_list", 
                   "typ", "arr_type", "arr_size" ]

    EOF = Token.EOF
    BOOLEAN_LITERAL=1
    INTEGER_LITERAL=2
    FLOAT_LITERAL=3
    STRING_LITERAL=4
    STR_CONCAT=5
    STR_COMPARE=6
    SCOPE_OP=7
    ADD=8
    SUB=9
    MUL=10
    DIV=11
    MOD=12
    NOT_EQUAL=13
    EQUAL_TO=14
    NOT=15
    AND=16
    OR=17
    LTE=18
    GTE=19
    ASSIGN=20
    LT=21
    GT=22
    LP=23
    RP=24
    LSB=25
    RSB=26
    LCB=27
    RCB=28
    SEMI=29
    COLON=30
    COMMA=31
    DOTDOT=32
    DOT=33
    BREAK=34
    CONTINUE=35
    IF=36
    ELSEIF=37
    ELSE=38
    FOREACH=39
    TRUE=40
    FALSE=41
    ARRAY=42
    IN=43
    INT=44
    FLOAT=45
    BOOLEAN=46
    STRING=47
    RETURN=48
    NULL=49
    CLASS=50
    VAL=51
    VAR=52
    SELF=53
    CONSTRUCTOR=54
    DESTRUCTOR=55
    NEW=56
    BY=57
    ID=58
    DOLLAR_ID=59
    BLOCK_COMMENT=60
    WS=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassdeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.classdecl()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 99
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def inside_decls(self):
            return self.getTypedRuleContext(D96Parser.Inside_declsContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def inheritance_from(self):
            return self.getTypedRuleContext(D96Parser.Inheritance_fromContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecl




    def classdecl(self):

        localctx = D96Parser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(D96Parser.CLASS)
            self.state = 102
            self.match(D96Parser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 103
                self.inheritance_from()


            self.state = 106
            self.match(D96Parser.LCB)
            self.state = 107
            self.inside_decls()
            self.state = 108
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inheritance_fromContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_inheritance_from




    def inheritance_from(self):

        localctx = D96Parser.Inheritance_fromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inheritance_from)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(D96Parser.COLON)
            self.state = 111
            self.match(D96Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inside_declsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ManydeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ManydeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_inside_decls




    def inside_decls(self):

        localctx = D96Parser.Inside_declsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inside_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.DOLLAR_ID))) != 0):
                self.state = 113
                self.manydecl()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(D96Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_manydecl




    def manydecl(self):

        localctx = D96Parser.ManydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_manydecl)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.vardecl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl1(self):
            return self.getTypedRuleContext(D96Parser.Funcdecl1Context,0)


        def funcdecl2(self):
            return self.getTypedRuleContext(D96Parser.Funcdecl2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = D96Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdecl)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.funcdecl1()
                pass
            elif token in [D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.funcdecl2()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcdecl1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def listparam_with_type(self):
            return self.getTypedRuleContext(D96Parser.Listparam_with_typeContext,0)


        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_funcdecl1




    def funcdecl1(self):

        localctx = D96Parser.Funcdecl1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl1)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 128
                self.match(D96Parser.LP)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID:
                    self.state = 129
                    self.listparam_with_type()


                self.state = 132
                self.match(D96Parser.RP)
                self.state = 133
                self.block_stmt()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(D96Parser.DESTRUCTOR)
                self.state = 135
                self.match(D96Parser.LP)
                self.state = 136
                self.match(D96Parser.RP)
                self.state = 137
                self.block_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcdecl2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def listparam_with_type(self):
            return self.getTypedRuleContext(D96Parser.Listparam_with_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_funcdecl2




    def funcdecl2(self):

        localctx = D96Parser.Funcdecl2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdecl2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLAR_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 141
            self.match(D96Parser.LP)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 142
                self.listparam_with_type()


            self.state = 145
            self.match(D96Parser.RP)
            self.state = 146
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Listparam_with_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listparam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ListparamContext)
            else:
                return self.getTypedRuleContext(D96Parser.ListparamContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_listparam_with_type




    def listparam_with_type(self):

        localctx = D96Parser.Listparam_with_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listparam_with_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.listparam()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 149
                self.match(D96Parser.SEMI)
                self.state = 150
                self.listparam()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListparamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_listparam




    def listparam(self):

        localctx = D96Parser.ListparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listparam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(D96Parser.ID)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 157
                self.match(D96Parser.COMMA)
                self.state = 158
                self.match(D96Parser.ID)
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.match(D96Parser.COLON)
            self.state = 165
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listvar(self):
            return self.getTypedRuleContext(D96Parser.ListvarContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def init_list(self):
            return self.getTypedRuleContext(D96Parser.Init_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_vardecl




    def vardecl(self):

        localctx = D96Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 168
            self.listvar()
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ASSIGN:
                self.state = 169
                self.match(D96Parser.ASSIGN)
                self.state = 170
                self.init_list()


            self.state = 173
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpContext,i)


        def array_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Array_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Array_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_init_list




    def init_list(self):

        localctx = D96Parser.Init_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 175
                self.exp()
                pass

            elif la_ == 2:
                self.state = 176
                self.array_decl()
                pass

